# ydice

./: Cargo.toml
src/: dice.rs  main.rs
