[package]
name = "ydice"
version = "0.1.0"
authors = ["Stephen Engelman <softwarerd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dependencies.rustbox]
git = "https://github.com/gchp/rustbox.git"
